--- a/TresEnRalla/TresEnRalla.vcxproj.filters
+++ b/TresEnRalla/TresEnRalla.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="mostrarMapa.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Victoria.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MainManager.h">
@@ -42,6 +45,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="mostrarMapa.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Victoria.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
